test/scc/expr/semantic-errors/047.t
void test()
{
    struct {int x;} a, b;
    a + b;
}